# MLOps_Project

./: .gitignore  README.md  linked_post.py  mail.py
Ai_agent_jd/: .dockerignore  Dockerfile  app.py  app_streamlit.py  requirements.txt  resumes.db  supabase_files.db
Ai_agent_jd/faiss_index/: index.faiss  index.pkl
Ai_agent_jd/myenv/: pyvenv.cfg
Ai_agent_jd/myenv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
Ai_agent_jd/src/: backend_jd copy.py  backend_jd.py
Ai_agent_jd/src/email_send/: email_calender.py  email_invite.py  send_offers.py
Ai_agent_jd/src/kundan/companey_post/: linked_post.py  readme.md
Ai_agent_jd/src/kundan/personal_post/: Dockerfile  models.py
Ai_agent_jd/src/kundan/supabase_get/: app.py  readme.md  requirements.txt
Ai_agent_jd/src/kundan/supabase_upload/: .dockerignore  Dockerfile  app.py  main.py  models.py  start.sh
Ai_agent_jd/src/linkdin/: linked_post.py
MAIL/: .gitignore  app_streamlit.py  email_send.py  pyproject.toml  schedule_and_offer.py  schedule_and_offer1.py
kundan/companey_post/: linked_post.py
kundan/personal_post/: .dockerignore  README.md  app.py  pyproject.toml
kundan/supabase_get/: app.py
kundan/supabase_upload/: .dockerignore  Dockerfile  README.md  app.py  main.py  requirements.txt
